bk_ida/gccida/g0/print_version
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_version/src/toplev.c:4872:7: error: use of undeclared identifier 'sep'
v2 = &sep; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_version/src/toplev.c:4878:1: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
lang_hooks_0.name, 
^~~~~~~~~~~~
lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_version/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_version/src/obj/toplev.o] Error 1
